--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
